test/files/run/reify-repl-fail-gracefully.check

scala> import language.experimental.macros
import language.experimental.macros

scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> 

scala> reify
       reify
       ^
On line 2: error: too few argument lists for macro invocation

scala> :quit
